# VULCAN

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  agni.py  build_atm.py  config.py  make_chem_funs.py  mkdocs.yml  op.py  paths.py  phy_const.py  pyproject.toml  run_vulcan.py  store.py  tests-integration.json  tests-total.json  tests-unit.json  vulcan.py
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/workflows/: code-style.yaml  publish-test-badges.yml  tests.yaml
atm/: convert_vpl_spectra_in_nm.py  make_spectra_in_nm.py
atm/stellar_flux/: plot_spectra.py  read_muscles_spectra_in_nm.py
cfg_examples/: README.txt  vulcan_cfg_Earth.py  vulcan_cfg_HD189.py  vulcan_cfg_Jupiter.py
docs/: fastchem.md  index.md  proteus_framework.md  quickstart.md
docs/Community/: CONTRIBUTING.md
docs/Explanations/: basic_equations.md  boundary_conditions.md  chemical_networks.md  condensation.md  explainer.md  haze_precursors.md  model_overview.md  model_usage.md  photochemistry.md  proteus_coupling.md  testing.md  titanium_vanadium.md  uv_cross_sections.md
docs/How-to/: chem_network.md  index.md  installation.md  use_in_proteus.md
docs/Reference/: bibliography.md  config.md  constants.md
docs/Reference/api/: agni.md  build_atm.md  config.md  index.md  logs.md  make_chem_funs.md  op.md  paths.md  phy_const.md  store.md  vulcan.md
docs/Tutorials/: first_run.md  quickstart.md
docs/javascripts/: header-links.js
docs/stylesheets/: extra.css
docs/tutorials/: index.md  quickstart.md
fastchem_vulcan/: make.global_options  makefile  version.txt
fastchem_vulcan/fastchem_src/: calc_densities.cpp  calc_electron_densities.cpp  calc_mean_mol_weight.cpp  calc_species_densities.cpp  check.cpp  fastchem.cpp  fastchem.h  init.cpp  init_add_species.cpp  input_output_struct.h  makefile  mass_action_constant.cpp  solve_fastchem.cpp  solver.cpp  solver.h  solver_bisection.cpp  solver_coeff.cpp  solver_linsol_quadsol.cpp  solver_nelder_mead_electron.cpp  solver_newtsol.cpp  species_struct.cpp  species_struct.h
fastchem_vulcan/model_main/: makefile  model_main.cpp
src/vulcan/: __init__.py  agni.py  build_atm.py  chem_funs.py  config.py  logs.py  make_chem_funs.py  op.py  paths.py  phy_const.py  store.py  vulcan.py
tests/: test_fastchem.py  test_imports.py  test_integration.py  test_logging.py
thermo/: CRAHCNO_network_old.txt  CRAHCNO_network_v3.txt  README.md  all_compose.txt
tools/: README.md  generate_test_badges.py  make_mix_table.py  make_spectra_in_nm.py  plot_Earth.py  plot_Jupiter_Tsai2021.py  plot_TP_Kzz.py  plot_actinic_flux.py  plot_cross.py  plot_cross_branches.py  plot_evolution.py  plot_helios_spectra.py  plot_many_vulcan.py  plot_spectra.py  plot_stellar_flux.py  plot_tau1_height_species.py  plot_tau1_species.py  plot_tot_cross.py  plot_vulcan.py  print_actinic_flux.py  prt_spectrum.py  stellar_flux_resample.py
