[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "vulcan"
version = "26.04.22"
description = "Photochemical kinetics for exoplanetary atmospheres, a fast and easy-to-use python code."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Shang-Min Tsai", email = "shangmin.tsai@ucr.edu"},
	{name = "Harrison Nicholls", email = "harrison.nicholls@ast.cam.ac.uk"},
]
keywords = [
    "Astronomy",
    "Exoplanets",
    "Model-coupling",
]
license = {text = "Apache 2.0 License"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "juliacall",
    "matplotlib",
    "numpy>=2.0.0",
    "pandas",
    "scipy",
    "sympy",
    "astropy"
]

[project.optional-dependencies]
docs = [
    "zensical",
    "markdown-include",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pymdown-extensions",
    "mkdocstrings",
    "mkdocs-bibtex"
]

[tool.setuptools]
py-modules = [
    "agni",
    "build_atm",
    "config",
    "make_chem_funs",
    "op",
    "paths",
    "phy_const",
    "store",
    "vulcan"
]

[project.urls]
homepage = "https://github.com/FormingWorlds/VULCAN/"
issues = "https://github.com/FormingWorlds/VULCAN/issues"
changelog = "https://github.com/FormingWorlds/VULCAN/releases"
