[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "vulcan"
version = "26.04.22"
description = "Photochemical kinetics for exoplanetary atmospheres, a fast and easy-to-use python code."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Shang-Min Tsai", email = "shangmin.tsai@ucr.edu"},
	{name = "Harrison Nicholls", email = "harrison.nicholls@ast.cam.ac.uk"},
]
keywords = [
    "Astronomy",
    "Exoplanets",
    "Model-coupling",
]
license = {text = "GPL-3.0-only"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "juliacall",
    "matplotlib",
    "numpy>=2.0.0",
    "pandas",
    "scipy",
    "sympy",
    "astropy",
]

[project.optional-dependencies]
docs = [
    "zensical",
    "markdown-include",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pymdown-extensions",
    "mkdocstrings",
    "mkdocs-bibtex"
]
develop = [
    "coverage",
    "tomlkit>=0.11.0",
    "pytest >= 8.1",
    "pytest-cov",
    "pytest-timeout",
    "ruff",
    "pre-commit"
]


[tool.setuptools]
package-dir = {"vulcan" = "src/vulcan"}
include-package-data = true

[project.urls]
homepage = "https://github.com/FormingWorlds/VULCAN/"
issues = "https://github.com/FormingWorlds/VULCAN/issues"
changelog = "https://github.com/FormingWorlds/VULCAN/releases"


[tool.ruff]
line-length = 96
target-version = "py312"
extend-exclude = ["*ipynb", "tools/", "thermo/", "fastchem_vulcan/", "cfg_examples/", "atm/"]

[tool.ruff.lint]
select = [
	"F",  # Pyflakes
	"E",  # pycodestyle (errorruff)
	"W",  # pycodestyle (warning)
    "I",    # isort
]
ignore = [
    "E501", # Line too long
    "E741", # Ambiguous variable name
]

[tool.ruff.lint.isort]
known-first-party=["vulcan"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.coverage.run]
branch = true
source = ["vulcan"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/conftest.py",
]

[tool.pytest.ini_options]
minversion = "8.1"
addopts = [
    # Global coverage options removed from addopts.
    # CI uses "coverage run -m pytest" with [tool.coverage.*] settings.
    # For local development, use either:
    #   1. "coverage run -m pytest" (matches CI behavior, compatible with coverage ratcheting)
    #   2. "pytest --cov" (uses pytest-cov, convenient but slightly different from CI)
    # Both approaches work; choose based on preference.
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--showlocals",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "smoke: marks tests as smoke tests (quick validation with real binaries, 1 timestep, low res)",
]

[tool.coverage.report]
fail_under = 10
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
[tool.bumpversion]
# https://callowayproject.github.io/bump-my-version/howtos/calver/
current_version = "26.04.22"
parse = """(?x)                      # Verbose mode
    (?P<release>                     # The release part
        (?:[1-9][0-9])\\.            # YY.
        (?:1[0-2]|0[1-9])\\.         # MM.
        (?:3[0-1]|[1-2][0-9]|0[1-9]) # DD
    )
    (?:\\.(?P<patch>\\d+))?         # .patch, optional
"""
serialize = ["{release}.{patch}", "{release}"]

[tool.bumpversion.parts.release]
calver_format = "{YY}.{0M}.{0D}"

[[tool.bumpversion.files]]
filename = "src/vulcan/__init__.py"
search = "__version__ = '{current_version}'"
replace = "__version__ = '{new_version}'"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "CITATION.cff"
search = "version: {current_version}"
replace = "version: {new_version}"
